# igpy-messagebus

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/igpy/messagebus/: __init__.py  messagebus.py  persistence.py  sqlite.py
src/igpy/serialization/: transcode.py  utils.py
tests/features/: messagebus-consumer.feature  sqlite-repository.feature
tests/features/steps/: messagebus_consumer.steps.py  sqlite.steps.py
tests/igpy/messagebus/: test_messagebus.py
tests/igpy/serialization/: test_transcode.py  test_utils.py
